# jacksonii-analyses

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_notebooks.sh
jacksonii_analyses/: bpp.py  clustering.py  plotting.py  sample_snp.py  trees.py  vcf_parser.py
notebooks/: 1-pca.ipynb  10-bpp-analyses.ipynb  11-fst-mex-pops.ipynb  12-clade-phylogenomics.ipynb  2-map-plotter.ipynb  3-admixture.ipynb  4-concat-tree.ipynb  5-loci-finder.ipynb  6-gene-tree-builder.ipynb  7-dpac.ipynb  8-guide-species-tree.ipynb  9-species-delimitation.ipynb  concat-tree.ipynb  loci-finder.ipynb  map-plotter.ipynb  pca.ipynb
notebooks/data/elevation/: GMRT.tif  metadata.txt
