[project]
name = "jacksonii-analyses"
version = "0.1.0"
description = "Analysis toolkit for Amanita jacksonii variants"
authors = [
    {name = "Santiago Sanchez",email = "santiago.snchez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-allel (>=1.3.13,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dendropy (>=5.0.8,<6.0.0)",
    "ete3 (>=3.1.3,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "vcf2fasta (>=0.1.2,<0.2.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "dask (>=2025.5.1,<2026.0.0)",
    "pystac-client (>=0.8.6,<0.9.0)",
    "planetary-computer (>=1.0.0,<2.0.0)",
    "biopython (>=1.85,<2.0)",
    "networkx (>=3.5,<4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"
ipykernel = "^6.29.5"

