[project]
name = "jacksonii-analyses"
version = "0.1.0"
description = ""
authors = [
    {name = "Santiago Sanchez",email = "santiago.snchez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-allel (>=1.3.13,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dendropy (>=5.0.8,<6.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "vcf2fasta (>=0.1.2,<0.2.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "dask (>=2025.7.0,<2026.0.0)",
    "pystac-client (>=0.9.0,<0.10.0)",
    "planetary-computer (>=1.0.0,<2.0.0)",
    "biopython (>=1.85,<2.0)",
    "ete3 (>=3.1.3,<4.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
